# P2PNet_D2

./: P2pNet.yaml  demo.py  export.py  train_net.py
cpp_inference/: CMakeLists.txt
cpp_inference/src/: main.cpp
p2p/: __init__.py  anchor_points.py  backbone.py  classification_model.py  config.py  dataset_mapper.py  datasets.py  decoder.py  lr_scheduler.py  p2p_loss.py  p2p_matcher.py  p2p_transforms.py  p2pnet.py  point_dataset.py  regression_model.py  trainer.py
